# w3

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  add.c  build.rs  config.cmd  config.h  config.mk  diag-switch-pop.h  diag-switch-push.h  ieee.h  isinf.c  isnan.c  math_private.h  readme.txt  s_floor.c  s_floorf.c  s_round.c  s_roundf.c  s_trunc.c  s_truncf.c  typedenum.cpp  w3-1.h  w3-2.h  w3.cpp  w3.h  w3.rs  w3BuiltinString.h  w3Context.h  w3ExportInstance.h  w3ExternalValue.h  w3Fd.cpp  w3Fd.h  w3Frame.h  w3Function.h  w3FunctionInstance.h  w3GlobalType.h  w3Handle.cpp  w3Handle.h  (+42 more)
attic/: Makefile  str.c  str.h  typ.c  typ.h  uintLE2.h  uintLEn.h  vec.c  vec.h
attic/1/: add.s  diag-switch-pop.h  ieee.h  isinf.c  s_floor.c  s_trunc.c  s_truncf.c  typedenum.cpp  w3-1.h  w3-2.h  w3.h  w3BitsForInt.h  w3ExportInstance.h  w3Function.h  w3FunctionInstance.h  w3Handle.cpp  w3InstructionMacros.h  w3Int.h  w3MemoryMappedFile.h  w3Module.cpp  w3SectionTraits.h  w3StackBase.h  w3StackBaseBase.h  w3StdFunc.h  w3StdInt.h  w3StdStaticAssert.h  w3TableType.h  w3TaggedValue.h  w3Wasm.h  wip.cpp
attic/2/: config.mk  mscver.cpp  s_roundf.c  w3-1.h  w3-2.h  w3.cpp  w3BuiltinString.h  w3Fd.h  w3Handle.h  w3InstructionNames.cpp  w3InstructionNames.h  w3Instructions.h  w3Int.cpp  w3Limits.h  w3Module.cpp  w3Module.h  w3ModuleInstance.h  w3StackValue.h  w3Tag.h  w3Value.h  w3rt.cpp  wip.cpp
env/: msvc15.cmd  msvc20.cmd  msvc40.cmd  msvc50.cmd
src/: main.rs  w3Module.rs  w3cpp.cpp  wasm_instructions.h
