[package]
name = "w3"
version = "0.0.0"
authors = ["Jay Krell <jay.krell@cornell.edu>"]
edition = "2018"
include = ["src/w3cpp.cpp"]

[dependencies]
libc = "*"
fs = "*"
#memmap = "*"
#vec = "*"
#derivative = "*"
#educe = "*"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "w3"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
